test/libsolidity/syntaxTests/inheritance/final_modifier/final_interface.sol
interface I final {
    function f() external;
}
// ----
// TypeError: (0-48): Interface cannot be declared final.
